# Awesome-Monitor

./: .gitignore  AwesomeMonitor-bin  AwesomeMonitor-plasmoids-metadata.json  AwesomeMonitor.cbp  CMakeCache.txt  CMakeLists.txt  awesomeMonitor-bin  install_manifest.txt  main.cpp  modelNew.json  newModel.json
data/: Model.json  Model2.json  Model3.json  Model4.json  Model5.json  emptyModel.json  modelTest.json
data/MyComponent/: MyComponent.jsonSchema
defaultConfig/: AwesomeMonitor  Model.json  Model2.json  Model3.json
defaultConfig/BaseComponents/AnimatedImage/: AnimatedImage.jsonSchema  AnimatedImage.qml
defaultConfig/BaseComponents/BorderImage/: BorderImage.jsonSchema  BorderImage.qml
defaultConfig/BaseComponents/Column/: Column.jsonSchema  Column.qml
defaultConfig/BaseComponents/Image/: Image.jsonSchema  Image.qml
defaultConfig/BaseComponents/ProgresBar/: ProgresBar.jsonSchema  ProgresBar.qml
defaultConfig/BaseComponents/Rectangle/: Rectangle.jsonSchema  Rectangle.qml
defaultConfig/BaseComponents/Row/: Row.jsonSchema  Row.qml
defaultConfig/BaseComponents/Text/: Text.jsonSchema  Text.qml
defaultConfig/BaseComponents/Window/: Window.jsonSchema  Window.qml
defaultConfig/DataModels/AvailableMemoryDataModel/: AvailableMemoryDataModel.jsonSchema  AvailableMemoryDataModel.qml
defaultConfig/DataModels/AvailableSwapSpaceDataModel/: AvailableSwapSpaceDataModel.jsonSchema  AvailableSwapSpaceDataModel.qml
defaultConfig/DataModels/BatteryCapacityDataModel/: BatteryCapacityDataModel.jsonSchema  (+1 more)
json-schema-validator/: .json.json.kate-swp  CMakeLists.txt  json-schema-validator.cbp  json.json  nlohmann_json_schema_validator.cbp
json-schema-validator/src/: json-validator.cpp
jsonEditor/: package-lock.json  package.json
jsonEditor/public/: index.html
jsonEditor/src/: App.js  index.js  qwebchannel.js
plasmoid/: metadata.desktop
src/: AppPlugin.h  CMakeLists.txt  Plugin.cpp  Plugin.h  main.cpp  plugins.qmltypes  qmldir
src/ComponentFramework/: CMakeLists.txt
src/ComponentFramework/ApplicationModel/: CMakeLists.txt  Model.cpp  Model.h
src/ComponentFramework/JsonToTreeParser/: CMakeLists.txt  JsonToTreeParser.cpp  JsonToTreeParser.h  errorComponent.qml
src/ComponentFramework/JsonValueConverter/: CMakeLists.txt  JsonValueConverter.cpp  JsonValueConverter.h
src/Components/: AwesomeComponentsPlugin.h  CMakeLists.txt  defaultJavascriptTransformers.mjs  plugin.qmltypes  plugins.qmltypes  qmldir
src/Components/BasicComponents/CircularGauge/: CircularGauge.qml
src/Components/BasicComponents/Gauge/: Gauge.qml
src/Components/BasicComponents/ProgresBar/: ProgresBar.qml
src/Components/BasicComponents/Table/: Table.qml
src/Components/BasicComponents/Text/: Text.qml
src/Components/BasicComponents/Window/: Window.qml
src/Components/ComponentUtils/: UtilsWrapper.cpp  UtilsWrapper.h  defaultJavascriptTransformers.mjs  utils.cpp  utils.h
src/Components/DataComponents/: DataModelBase.cpp  DataModelBase.h
src/Components/DataComponents/AvailableMemoryDataModel/: AvailableMemoryDataModel.cpp  AvailableMemoryDataModel.h
src/Components/DataComponents/AvailableSwapSpaceDataModel/: AvailableSwapSpaceDataModel.cpp  AvailableSwapSpaceDataModel.h
src/Components/DataComponents/BatteryCapacityDataModel/: BatteryCapacityDataModel.cpp  BatteryCapacityDataModel.h
src/Components/DataComponents/BatteryStatusDataModel/: BatteryStatusDataModel.cpp  BatteryStatusDataModel.h
src/Components/DataComponents/CommandLineDataModel/: CommandLineDataModel.cpp  CommandLineDataModel.h
src/Components/DataComponents/CpuCurrentFrequencyDataModel/: CpuCurrentFrequencyDataModel.cpp  CpuCurrentFrequencyDataModel.h  CpuCurrentFrequencyDataModel.qml
src/Components/DataComponents/CpuMaxFrequencyDataModel/: CpuMaxFrequencyDataModel.cpp  CpuMaxFrequencyDataModel.h
src/Components/DataComponents/CpuMaxTemperatureDataModel/: CpuMaxTemperatureDataModel.cpp  CpuMaxTemperatureDataModel.h  CpuMaxTemperatureDataModel.qml
src/Components/DataComponents/CpuMinFrequencyDataModel/: CpuMinFrequencyDataModel.cpp  CpuMinFrequencyDataModel.h
src/Components/DataComponents/CpuTemperatureDataModel/: CpuTemperatureDataModel.cpp  CpuTemperatureDataModel.h  CpuTemperatureDataModel.qml
src/Components/DataComponents/CpuUtilisationDataModel/: CpuUtilisationDataModel.cpp  CpuUtilisationDataModel.h
src/Components/DataComponents/DownloadSpeedDataModel/: DownloadSpeedDataModel.cpp  DownloadSpeedDataModel.h
src/Components/DataComponents/FreeMemoryDataModel/: FreeMemoryDataModel.cpp  FreeMemoryDataModel.h
src/Components/DataComponents/FreeSwapSpaceDataModel/: FreeSwapSpaceDataModel.cpp  FreeSwapSpaceDataModel.h
src/Components/DataComponents/SingleCpuCoreCurrentFrequencyDataModel/: SingleCpuCoreCurrentFrequencyDataModel.cpp  SingleCpuCoreCurrentFrequencyDataModel.h  SingleCpuCoreCurrentFrequencyDataModel.qml
src/Components/DataComponents/SingleCpuCoreMaxFrequencyDataModel/: SingleCpuCoreMaxFrequencyDataModel.cpp  SingleCpuCoreMaxFrequencyDataModel.h
src/Components/DataComponents/SingleCpuCoreMaxTemperatureDataModel/: SingleCpuCoreMaxTemperatureDataModel.cpp  SingleCpuCoreMaxTemperatureDataModel.h  SingleCpuCoreMaxTemperatureDataModel.qml
src/Components/DataComponents/SingleCpuCoreMinFrequencyDataModel/: SingleCpuCoreMinFrequencyDataModel.cpp  SingleCpuCoreMinFrequencyDataModel.h
src/Components/DataComponents/SingleCpuCoreTemperatureDataModel/: SingleCpuCoreTemperatureDataModel.cpp  SingleCpuCoreTemperatureDataModel.h  SingleCpuCoreTemperatureDataModel.qml
src/Components/DataComponents/SingleCpuCoreUtilisationDataModel/: SingleCpuCoreUtilisationDataModel.cpp  SingleCpuCoreUtilisationDataModel.h
src/Components/DataComponents/UploadSpeedDataModel/: UploadSpeedDataModel.cpp  UploadSpeedDataModel.h
src/Editor/Models/: CMakeLists.txt  ImageLivePreviewProvider.cpp  ImageLivePreviewProvider.h
src/Editor/Models/ComponentListModel/: CMakeLists.txt  ComponentListModel.cpp  ComponentListModel.h
src/Editor/Models/PluginTreeModel/: CMakeLists.txt  PluginTreeModel.cpp  PluginTreeModel.h
(+38 files in other folders)
